src/styles/css/main.stylesheet.css
/* ... */
select:focus,
select > option:focus {
    border: none;
    outline: none;
}

input[type='number']:focus {
    background-color: transparent;
    outline: none;
    border: none;
    color: white;
}

table {
    border-collapse: collapse;
    -webkit-user-select: none;
    /* Chrome/Safari */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* IE10+ */
    /* Rules below not implemented in browsers yet */
    -o-user-select: none;
    user-select: none;
}

button {
    background: none;
    color: inherit;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
    box-shadow: none;
}

button:not('.quick-btn button'):active {
    background: transparent !important;
}

button:active,
button:focus {
    box-shadow: none !important;
    border: none;
    outline: none;
    /* border-color: white !important; */
}

button:focus {
    box-shadow: none;
}

input[type='text']:focus {
    background: transparent;
    /* color: white; */
}

/*! Global styles ends here */

.noSelect {
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -o-user-select: none;
}

.navbar-menu {
    position: relative;
    transition: all 0.2s ease-in-out;
}

.navbar-menu > li > a {
    border: 1px solid transparent;
    border-radius: 1px;
    padding: 2px 8px;
    transition: all 0.2s ease-in-out;
    margin-right: 10px;
}

.navbar-menu > li > a span,
.acc-caret {
    content: '';
    background: url(./assets/small-components/chevron-down.svg) center/cover
        no-repeat;
    display: inline-block;
    height: 5px;
    width: 5px;
    position: absolute;
    right: 0;
    top: 50%;
    transform: translateY(-66%);
    padding: 4px;
    margin: 0 5px;
    transition: all 0.2s ease-in-out;
}

.acc-caret {
    right: -17px;
}
.navbar-menu > li > a:hover {
    border-bottom: 1px solid white;
    text-decoration: none;
}

.navbar-menu > li > a:hover span,
.acc-drop:hover .acc-caret {
    background: none;
}

.projectName {
    position: relative;
    left: 0.5rem;
    font-size: 1em;
    text-align: center;
    display: inline-block;
    width: 35vw;
    overflow: hidden;
    text-overflow: ellipsis;
}

@media (max-width: 991px) {
    .projectName {
        visibility: hidden;
    }
}

.account-btn {
    position: absolute;
    right: 13px;
    padding: 4px 10px;
    border: 1px solid transparent;
    border-radius: 1px;
    transition: all 0.2s ease-in-out;
}

.account-btn:hover {
    border-bottom: 1px solid white;
    text-decoration: none;
}

.user-field {
    display: inline-block;
    max-width: 11rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: right;
}

@media (max-width: 991px) {
    .user-field {
        visibility: hidden;
    }
}

.signIn-btn {
    color: var(--text-primary);
}

.cur-user,
.signIn-btn {
    color: #fff;
}

.signIn-btn:hover {
    color: var(--text-primary);
    text-decoration: none;
}

.logo {
    background: url(./assets/logo.svg) center/cover;
    height: 30px;
    width: 105px;
    display: inline-block;
    margin-right: 36px;
}

/* dropdown-menu styles */

.dropdown > ul {
    border-radius: 5px;
    text-align: center;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 13px);
}

.draggable-panel-css {
    border-radius: 5px;
    z-index: 70;
    transition: background 0.5s ease-out;
    position: fixed;
}

@supports (backdrop-filter: blur()) {
    .dropdown > ul {
        backdrop-filter: blur(5px);
    }
}

.mw-override {
    min-width: 110px;
}

.dropdown > ul::before {
    background-color: transparent;
    content: '';
    width: 10px;
    display: inline-block;
    height: 10px;
    position: absolute;
    transform: translate(-50%, -13px) rotate(-45deg);
}

.dropdown > ul::after {
    content: '';
    width: 11.5px;
    display: inline-block;
    height: 10px;
    position: absolute;
    transform: translate(-50%, -15.5px);
    top: 14.5px;
}

.dropdown-menu > li > a {
    padding: 7px 0;
    width: 90%;
    margin: auto;
    transition: all 0.2s ease-in-out;
    text-align: left;
    padding-left: 10px;
}

.dropdown-menu > li > a:hover {
    border-radius: 7px;
    opacity: 1;
}

@media (max-width: 991px) {
    .navbar-nav .dropdown-menu {
        position: absolute !important;
        float: none;
    }
}

#contextMenu {
    width: 150px;
    visibility: hidden;
    position: fixed;
    z-index: 1000;
    opacity: 0;
    top: 100;
    left: 100;
    cursor: pointer;
    padding-bottom: 7px;
    padding-top: 7px;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    border-radius: 5px;
}

#contextMenu ul {
    margin: 0;
    padding: 0;
}

#contextMenu ul li {
    list-style: none;
    padding: 8px;
    padding-left: 20px;
    width: 90%;
    margin: auto;
}

#contextMenu ul li:hover {
    border-radius: 7px;
    opacity: 1;
}

@supports (backdrop-filter: blur()) {
    #contextMenu {
        backdrop-filter: blur(5px);
    }
    #contextMenu ul li:hover {
        backdrop-filter: blur(50px);
        -webkit-backdrop-filter: blur(50px);
    }
}

/** ce-panel styling  starts */

.ce-panel {
    font: inherit;
    width: 240px;
    top: 90px;
    left: 10px;
}

.accordion > :last-child {
    margin-bottom: 15px;
}

.draggable-panel-css .panel-header {
    border-radius: 5px;
    border-top-right-radius: 5px;
    padding-top: 15px;
    padding: 10px;
    padding-top: 15px;
    padding-left: 17px;
    font-weight: bold;
    font-size: 16px;
    text-transform: uppercase;
    text-align: left;
    cursor: move;
}

.draggable-panel-css .panel-header::before {
    content: '';
    width: 34px;
    border-radius: 2px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    top: 6px;
}

.draggable-panel-css .panel-body {
    padding-top: 10px;
}
/* ... */

